--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>Node-Neurosky Visualizer Boilerplate</title>
+    <title>Meditation Deathmatch</title>
 
     <meta name="description" content="a game" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
