stop crashing on connection error

--- a/client/index.html
+++ b/client/index.html
@@ -79,7 +79,7 @@
     <script type="x-tmpl" id="tmpl-intro">
         <div class="square">
             <img src="media/background2.png" />
-            <button type="button" class="btn btn-success btn-start">Begin</button>
+            <button type="button" class="btn btn-success btn-start">Connect</button>
             
         </div>
     </script>
