single player mode complete

--- a/client/index.html
+++ b/client/index.html
@@ -101,9 +101,8 @@
 
         svg {
             position: absolute;
-            bottom: 100px;
+            bottom: 95px;
             left: 50px;
-            margin-top: 0px;
             margin-left: -50px;
             z-index: 1;
         }
@@ -114,7 +113,7 @@
             position: absolute;
             /*border: 1px solid white;*/
             margin-top: 180px;
-            z-index: 2;
+            z-index: 6;
         }
         .readout p {
             color: white;
@@ -566,13 +565,15 @@ require([], function () {
             theta = data.eegPower.theta/1000;
 
 
-            if (data.eSense.meditation > 90 && data.eSense.attention > 90) {
+            if (data.eSense.meditation < 20 && data.eSense.attention < 20) {
+                score += 1;
+            } else if (data.eSense.meditation > 90 && data.eSense.attention > 90) {
                 score += 24;
             } else if (data.eSense.meditation > 90) {
                 score += 12;
             } else if (data.eSense.meditation > 80) {
                 score += 1;
-            }
+            } 
 
 
             var signalToNoise = Math.floor(((profile.history.length - droppedFrames) / profile.history.length) *100)
@@ -699,10 +700,10 @@ require([], function () {
         },
         {
             left: [ 'Replay', function(){
-                disconnectIo();
-                console.log('todo: replay');
+                //disconnectIo();
+                //console.log('todo: replay');
                 window.refresh();
-                go(0);
+                //go(0);
             } ],
             right: [ '', function (){
                 console.log('todo: save');
