--- a/client/index.html
+++ b/client/index.html
@@ -123,26 +123,41 @@
         div.progress {
             z-index: 3;
             margin: 0;
+            border-radius: 0;
+            border-bottom:1px solid #999;
         }
 
-        .floatL { float: left;}
-        .floatR { float: right;}
+        .floatL { float: left; position: relative; display: inline-block; border-right:1px solid #999;}
+        .floatR { float: right; position: relative; display: inline-block; border-left:1px solid #999;}
+        .floatR .progress-bar { float: right; }
     </style>
 
   </head>
   <body>
-
-    <div class="progress meditation" style="width:50%">
+    
+    <div class="progress meditation floatL" style="width:50%">
       <div class="progress-bar progress-bar-info"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
         <span class="sr-only">45% Complete</span>
       </div>
     </div>
-
-    <div class="progress attention" style="width:50%">
+    <div class="progress meditation2 floatR" style="width:50%">
+      <div class="progress-bar progress-bar-info"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+        <span class="sr-only">45% Complete</span>
+      </div>
+    </div>
+    <div class="progress attention floatL" style="width:50%">
       <div class="progress-bar progress-bar-danger"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
         <span class="sr-only">65% Complete</span>
       </div>
     </div>
+    <div class="progress attention2 floatR" style="width:50%">
+      <div class="progress-bar progress-bar-danger"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+        <span class="sr-only">65% Complete</span>
+      </div>
+    </div>
+   
+
+
     <div id="container">
     </div>
 	
