--- a/python-server/simple_chat/chat.html
+++ b/python-server/simple_chat/chat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="static/css/style.css" rel="stylesheet">
+    <!-- <link href="static/css/style.css" rel="stylesheet"> -->
     <script type="text/javascript" src="static/jquery-1.6.1.min.js"></script>
     <script type="text/javascript" src="static/socket.io.js"></script>
     <script>    
@@ -16,23 +16,23 @@ $(window).bind("beforeunload", function() {
     socket.disconnect();
 });
 
-socket.on('connect', function () {
-    $('#chat').addClass('connected');
-});
-
-socket.on('announcement', function (msg) {
-    $('#lines').append($('<p>').append($('<em>').text(msg)));
-});
-
-socket.on('nicknames', function (nicknames) {
-    $('#nicknames').empty().append($('<span>Online: </span>'));
-    for (var i in nicknames) {
-	  $('#nicknames').append($('<b>').text(nicknames[i]));
-    }
-});
-
-socket.on('msg_to_room', message);
-
+//socket.on('connect', function () {
+//    $('#chat').addClass('connected');
+//});
+//
+//socket.on('announcement', function (msg) {
+//    $('#lines').append($('<p>').append($('<em>').text(msg)));
+//});
+//
+//socket.on('nicknames', function (nicknames) {
+//    $('#nicknames').empty().append($('<span>Online: </span>'));
+//    for (var i in nicknames) {
+//	  $('#nicknames').append($('<b>').text(nicknames[i]));
+//    }
+//});
+//
+//socket.on('msg_to_room', message);
+//
 socket.on('reconnect', function () {
     $('#lines').remove();
     message('System', 'Reconnected to the server');
@@ -50,34 +50,49 @@ function message (from, msg) {
     $('#lines').append($('<p>').append($('<b>').text(from), msg));
 }
 
+
 // DOM manipulation
 $(function () {
-    $('#set-nickname').submit(function (ev) {
-        socket.emit('nickname', $('#nick').val(), function (set) {
-            if (!set) {
-                clear();
-                return $('#chat').addClass('nickname-set');
-            }
-            $('#nickname-err').css('visibility', 'visible');
-        });
-        return false;
-    });
 
-    $('#send-message').submit(function () {
-	    message('me', $('#message').val());
-	    socket.emit('user message', $('#message').val());
-	    clear();
-	    $('#lines').get(0).scrollTop = 10000000;
-	    return false;
-    });
+  $('#connect').submit(function () {
+    socket.emit('request_connect');
+    return false;
+  });
 
-    function clear () {
-        $('#message').val('').focus();
-    };
+//    $('#set-nickname').submit(function (ev) {
+//        socket.emit('nickname', $('#nick').val(), function (set) {
+//            if (!set) {
+//                clear();
+//                return $('#chat').addClass('nickname-set');
+//            }
+//            $('#nickname-err').css('visibility', 'visible');
+//        });
+//        return false;
+//    });
+//
+//    $('#send-message').submit(function () {
+//	    message('me', $('#message').val());
+//	    socket.emit('user message', $('#message').val());
+//	    clear();
+//	    $('#lines').get(0).scrollTop = 10000000;
+//	    return false;
+//    });
+//
+//    function clear () {
+//        $('#message').val('').focus();
+//    };
 });
     </script>
   </head>
 <body>
+
+<div id="log"></div>
+<div id="lines"></div>
+<form id="connect">
+  <button>Connect</button>
+</form>
+
+<!--
   <div id="chat">
     <div id="nickname">
       <form id="set-nickname" class="wrap">
@@ -98,5 +113,8 @@ $(function () {
       <button>Send</button>
     </form>
   </div>
+-->
+
+
 </body>
 </html>
