--- a/python-server/chat.html
+++ b/python-server/chat.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- <link href="static/css/style.css" rel="stylesheet"> -->
-    <script type="text/javascript" src="static/jquery-1.6.1.min.js"></script>
-    <script type="text/javascript" src="static/socket.io.js"></script>
+    <!-- <link href="client/css/style.css" rel="stylesheet"> -->
+    <script type="text/javascript" src="client/jquery-1.6.1.min.js"></script>
+    <script type="text/javascript" src="client/socket.io.js"></script>
     <script>    
 
-WEB_SOCKET_SWF_LOCATION = "/static/WebSocketMain.swf";
+WEB_SOCKET_SWF_LOCATION = "/client/WebSocketMain.swf";
 WEB_SOCKET_DEBUG = true;
 
 // socket.io specific code
