Fixing up the connectivity

--- a/python-server/client/index.html
+++ b/python-server/client/index.html
@@ -200,14 +200,14 @@
         </div>
     </script>
 
-  	<script src="./client/base/require/require.js"></script> 
+  	<script src="/client/base/require/require.js"></script> 
     <script>
 
 // same as on document ready
 require([], function () {
 
     require.config({
-        baseUrl: './client/base/',
+        baseUrl: '/client/base/',
         paths: {
 
             'modernizr': 'modernizr-2.0.6.min',
