--- a/python-server/client/index.html
+++ b/python-server/client/index.html
@@ -218,7 +218,7 @@ require([], function () {
             'typecast': 'typecast/typecast.raw', // replace with $.type?
             'frame': 'frame2',
             'model': 'ModelAgent',
-            'socket.io': 'socket.io/socket.io',
+            'socket.io': '../socket.io',
             'lscache': 'lscache', 
             'd3': 'd3.min',
 
