--- a/python-server/client/index.html
+++ b/python-server/client/index.html
@@ -122,10 +122,11 @@
 
         svg {
             position: absolute;
-            bottom: 95px;
+            top: 300px;
             left: 50px;
             margin-left: -50px;
             z-index: 1;
+            display:none;
         }
 
         .readout {
