Everyone wants to know their final score. Bishop did this fix

--- a/python-server/client/index.html
+++ b/python-server/client/index.html
@@ -755,9 +755,9 @@ require([], function () {
                     $('.readout').html('');
                     console.log('game complete');
 
-                    setButton('right', 'Replay', function(){
-                        window.location.reload();
-                    });
+                    // setButton('right', 'Replay', function(){
+                        // window.location.reload();
+                    // });
                     //next();
                 });
 
