Patch issue where sometimes jQuery isn't loaded on time

--- a/client/index.html
+++ b/client/index.html
@@ -206,6 +206,7 @@
     </script>
 
   	<script src="/client/base/require/require.js"></script> 
+  	<script src="/client/base/jquery/jquery-1.9.1.min.js"></script> 
     <script>
 
 // same as on document ready
@@ -215,9 +216,9 @@ require([], function () {
         baseUrl: '/client/base/',
         paths: {
 
-            'modernizr': 'modernizr-2.0.6.min',
             'jquery': 'jquery/jquery-1.9.1.min',
             'jquery.center': 'jquery/jquery.center.min',
+            'modernizr': 'modernizr-2.0.6.min',
             'underscore': 'underscore-min',
             'underscore.string': 'underscore.string.min',
             'typecast': 'typecast/typecast.raw', // replace with $.type?
